--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<div class="counter-wrapper">
+<div id="root" class="counter-wrapper">
   <h1>Counter</h1>
   <form class='counter'>
     <input type="number" name="counter" id="counter" value='0'/>
