--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,5 +5,5 @@
     <button id="increment">Increment</button>
     <button id="decrement">Decrement</button>
   </form>
-	<%= javascript_pack_tag 'counter'%>
+	<%= javascript_pack_tag 'counter.js'%>
 </div>
