--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,9 +1,11 @@
-<div id="root" class="counter-wrapper">
+<!-- <div id="root" class="counter-wrapper">
   <h1>Counter</h1>
   <form class='counter'>
     <input type="number" name="counter" id="counter" value='0'/>
     <button id="increment">Increment</button>
     <button id="decrement">Decrement</button>
   </form>
-	<%= javascript_pack_tag 'counter.js'%>
-</div>
+</div> -->
+<div id="react-root"></div>
+<%= javascript_pack_tag 'counter.js'%>
+
